[package]
name = "gloo-dialogs"
description = "Convenience crate for working with dialogs in browser"
version = "0.3.0"
authors = ["Rust and WebAssembly Working Group"]
edition = { workspace = true }
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/dialogs"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = { workspace = true }

[dependencies]
wasm-bindgen = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = ["Window"]
