[package]
name = "gloo-events"
description = "Convenience crate for working with DOM event listeners"
version = "0.3.0"
authors = ["Rust and WebAssembly Working Group"]
edition = { workspace = true }
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/events"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "web-programming", "wasm"]
rust-version = { workspace = true }

[dependencies]
wasm-bindgen = { workspace = true }

[dependencies.web-sys]
version = "0.3.91"
features = ["Event", "EventTarget", "AddEventListenerOptions"]

[dev-dependencies]
js-sys = { workspace = true }
futures = "0.3"
wasm-bindgen-test = { workspace = true }

[dev-dependencies.web-sys]
version = "0.3.91"
features = [
  "HtmlElement",
  "Window",
  "Document",
  "Element",
  "MouseEvent",
  "ProgressEvent",
]
