[package]
name = "gloo-file"
description = "Convenience crate for working with JavaScript files and blobs"
version = "0.3.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/file"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = { workspace = true }

[package.metadata.docs.rs]
features = ["futures"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
gloo-events = { path = "../events", version = "0.2" }
mime = { version = "0.3.13", optional = true }
futures-channel = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3.31"
features = [
  "Blob",
  "File",
  "FileList",
  "FileReader",
  "HtmlInputElement",
  "BlobPropertyBag",
  "FilePropertyBag",
  "DomException",
  "Url",
]

[dev-dependencies]
futures_rs = { version = "0.3", package = "futures" }
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }
chrono = { version = "0.4.10", features = ["wasmbind"] }

[dev-dependencies.web-sys]
version = "0.3.31"
features = ["Window", "Response"]

[features]
default = []
futures = ["futures-channel"]
