[package]
name = "gloo-history"
version = "0.3.0"
description = "Universal Session History"
authors = ["Rust and WebAssembly Working Group"]
edition = { workspace = true }
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/history"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "wasm"]
rust-version = { workspace = true }

[dependencies]
gloo-utils = { version = "0.3", path = "../utils" }
gloo-events = { version = "0.3", path = "../events" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
serde_urlencoded = { version = "0.7", optional = true }
thiserror = { workspace = true, optional = true }
wasm-bindgen = "0.2.114"

[dependencies.web-sys]
version = "0.3"
features = ["History", "Window", "Location", "Url"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
gloo-timers = { version = "0.4", features = ["futures"], path = "../timers" }

[features]
query = ["thiserror", "serde_urlencoded"]
default = ["query"]
