[package]
name = "gloo-timers"
description = "Convenience crate for working with JavaScript timers"
version = "0.3.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/timers"
homepage = "https://github.com/rustwasm/gloo"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = { workspace = true }

[package.metadata.docs.rs]
features = ["futures"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = { workspace = true }
futures-core = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

[features]
default = []
futures = ["futures-core", "futures-channel"]


[dev-dependencies]
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
futures-util = "0.3"
