[package]
name = "gloo-worker-macros"
version = "0.2.0"
authors = ["Rust and WebAssembly Working Group"]
edition = { workspace = true }
readme = "README.md"
description = "Convenience crate for working with Web Workers"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/worker"
homepage = "https://github.com/rustwasm/gloo"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "2.0.15", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.116"
gloo = { path = "../..", features = ["futures"] }
