[package]
name = "gloo-worker"
version = "0.5.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"
readme = "README.md"
description = "Convenience crate for working with Web Workers"
repository = "https://github.com/rustwasm/gloo/tree/master/crates/worker"
homepage = "https://github.com/rustwasm/gloo"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
bincode = "1"
gloo-utils = { path = "../utils", version = "0.2" }
gloo-worker-macros = { path = "../worker-macros", version = "0.1" }
js-sys = { workspace = true }
pinned = "0.1.0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = { workspace = true }
futures = { version = "0.3", features = ["std"], default-features = false }
thiserror = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "Url",
  "Worker",
  "WorkerOptions",
]

[features]
default = []
futures = []
