[package]
name = "example-file-hash"
version = "0.1.0"
edition = "2021"
authors = ["Rust and WebAssembly Working Group"]
publish = false
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We use the gloo-worker directly to avoid dependency conflicts as Yew also uses gloo.
gloo-worker = { path = "../../crates/worker" }
serde = "1.0.228"
web-sys = { version = "0.3.91", features = ["File", "Blob", "ReadableStream"] }
wasm-bindgen-futures = { workspace = true }
wasm-streams = "0.5.0"
wasm-bindgen = "0.2.114"
futures = "0.3.32"
sha2 = "0.10.9"
console_error_panic_hook = "0.1.7"
yew = { version = "0.21.0", features = ["csr"] }
serde-wasm-bindgen = "0.6.5"
js-sys = { workspace = true }
hex = "0.4.3"
