[package]
name = "example-markdown"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = { workspace = true }
publish = false
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
gloo = { path = "../..", features = ["futures"] }

js-sys = { workspace = true }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
