[package]
name = "nested-worker-yew"
version = "0.1.0"
edition = "2021"
authors = ["Mattuwu"]
publish = false

[dependencies]
gloo-worker = { path = "../../crates/worker" }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["MouseEvent"] }
js-sys = "0.3"
rand = "0.9"
# getrandom 0.3.2+ resolves wasi 0.14.7 which pulls in wasip2/wit-bindgen 0.51
# requiring edition 2024, incompatible with MSRV 1.82
getrandom = { version = ">=0.3.0, <0.3.2", features = ["wasm_js"] }
