[package]
name = "nested-worker-yew"
version = "0.1.0"
edition = { workspace = true }
authors = ["Mattuwu"]
publish = false

[dependencies]
gloo-worker = { path = "../../crates/worker" }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
yew = { version = "0.23.0", features = ["csr"] }
web-sys = { version = "0.3", features = ["MouseEvent"] }
js-sys = "0.3"
rand = "0.10"
