[package]
name = "example-prime"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.32"
gloo = { path = "../..", features = ["futures"] }
primes = "0.4.0"
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
